--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1> WELCOME TO FINLAND </h1>
+   
+    <p> Finland is a nice country with many beautiful scenery. Today, we will introduce to you the series "GO WITH US" on our website to share some useful information about tourism city and how to get the best trip ever in Finland. </p>
+    <ul>
+      <li>  <a href="Helsinki.html">Capital Helsinki</a> </li>
+      <li>  <a href="Turku.html"> Ancient Town Turku </a> </li>
+      <li>  <a href="Lapland.html"> Santa Claus Hometown Lapland </a> </li>
+    </ul>
+    <p> Please enjoy it right now ! </p>
+    <img class="Intro" src="Finland.jpg" alt="Introduction" />
+    <h6> Cre: Tom Brunberg, Unsplash </h6>
+  </body>
+</html>
