--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
       <li>  <a href="Helsinki.html">Capital Helsinki</a> </li>
       <li>  <a href="Turku.html"> Ancient Town Turku </a> </li>
       <li>  <a href="Lapland.html"> Santa Claus Hometown Lapland </a> </li>
+    <div class="grid-container">
+  <div class="grid-item">1</div>
+  <div class="grid-item">2</div>
+  <div class="grid-item">3</div>
+  <div class="grid-item">4</div>
+  <div class="grid-item">5</div>
+  <div class="grid-item">6</div>
+  <div class="grid-item">7</div>
+  <div class="grid-item">8</div>
+  <div class="grid-item">9</div>
+</div>
     </ul>
     <p> Please enjoy it right now ! </p>
     <img class="Intro" src="Finland.jpg" alt="Introduction" />
