--- a/index.html
+++ b/index.html
@@ -11,16 +11,40 @@
       <li>  <a href="Helsinki.html">Capital Helsinki</a> </li>
       <li>  <a href="Turku.html"> Ancient Town Turku </a> </li>
       <li>  <a href="Lapland.html"> Santa Claus Hometown Lapland </a> </li>
-    <div class="grid-container">
+<style>
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: #2196F3;
+  padding: 10px;
+}
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+</style>
+</head>
+<body>
+
+<h1>Grid Elements</h1>
+
+<p>A Grid Layout must have a parent element with the <em>display</em> property set to <em>grid</em> or <em>inline-grid</em>.</p>
+
+<p>Direct child element(s) of the grid container automatically becomes grid items.</p>
+
+<div class="grid-container">
   <div class="grid-item">1</div>
   <div class="grid-item">2</div>
-  <div class="grid-item">3</div>
+  <div class="grid-item">3</div>  
   <div class="grid-item">4</div>
   <div class="grid-item">5</div>
-  <div class="grid-item">6</div>
+  <div class="grid-item">6</div>  
   <div class="grid-item">7</div>
   <div class="grid-item">8</div>
-  <div class="grid-item">9</div>
+  <div class="grid-item">9</div>  
 </div>
     </ul>
     <p> Please enjoy it right now ! </p>
