--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
    
     <p> Finland is a nice country with many beautiful scenery. Today, we will introduce to you the series "GO WITH US" on our website to share some useful information about tourism city and how to get the best trip ever in Finland. </p>
     <ul>
-      <li>  <a href="Helsinki.html">Capital Helsinki</a> </li>
-      <li>  <a href="Turku.html"> Ancient Town Turku </a> </li>
-      <li>  <a href="Lapland.html"> Santa Claus Hometown Lapland </a> </li>
+      <li>  <a href="helsinki.html">Capital Helsinki</a> </li>
+      <li>  <a href="turku.html"> Ancient Town Turku </a> </li>
+      <li>  <a href="lapland.html"> Santa Claus Hometown Lapland </a> </li>
 
 
-<h1>Grid Elements</h1>
-
-<p>A Grid Layout must have a parent element with the <em>display</em> property set to <em>grid</em> or <em>inline-grid</em>.</p>
-
-<p>Direct child element(s) of the grid container automatically becomes grid items.</p>
 
 <div class="grid-container">
   <div class="grid-item">1</div>
