--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1> WELCOME TO FINLAND </h1>
@@ -39,8 +39,8 @@
 <p>Direct child element(s) of the grid container automatically becomes grid items.</p>
 
 <div class="grid-container">
-  <div class="grid-item">1</div>
-  <div class="grid-item">2</div>
+  <div class="grid-item">Place</div>
+  <div class="grid-item">Picture</div>
   <div class="grid-item">3</div>  
   <div class="grid-item">4</div>
   <div class="grid-item">5</div>
