--- a/helsinki.html
+++ b/helsinki.html
@@ -5,8 +5,8 @@
   </head>
   <body>
       <a href="index.html">Home</a> 
-      <a href="Turku.html"> Ancient Town Turku </a> 
-     <a href="Lapland.html"> Santa Claus Hometown Lapland </a>
+      <a href="turku.html"> Ancient Town Turku </a> 
+     <a href="lapland.html"> Santa Claus Hometown Lapland </a>
     <h2> GO WITH US 1 -HELSINKI </h2>
     Have you ever questioned “Why Finland becomes the happiest country in the world” ? Go to Finland with our series “GO WITH US”, you will soon get the answer.
     I’m pretty sure that many people think that Finland is very small and there are not many tourist attractions, so they hardly choose Finland as a must - visit destination when travelling. But they will soon change that thought when first visiting Finland, especially their capital: Helsinki. You will be surprised with the many impressive things here.	
