--- a/lapland.html
+++ b/lapland.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <a href="index.html">Home</a> 
-    <a href="Turku.html"> Ancient Town Turku </a> 
-    <a href="Helsinki.html"> Capital Helsinki </a>
+    <a href="turku.html"> Ancient Town Turku </a> 
+    <a href="helsinki.html"> Capital Helsinki </a>
     <h2> GO WITH US 2 - LAPLAND </h2>
     Welcome back to the series “GO WITH US”! Today, we will bring you to a very special place in Finland - Santa Claus’s hometown.
 
