--- a/turku.html
+++ b/turku.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <a href="index.html">Home</a> 
-    <a href="Helsinki.html"> Capital Helsinki </a> 
-    <a href="Lapland.html"> Santa Claus Hometown Lapland </a>
+    <a href="helsinki.html"> Capital Helsinki </a> 
+    <a href="lapland.html"> Santa Claus Hometown Lapland </a>
     <h2> GO WITH US 3 - TURKU </h2>
     Today, we will continue our series with the very famous city in Finland with its ancient beautiful scenery - Turku
     Many visitors come to Finland, maybe just plan to visit the modern Helsinki or the wonderland Lapland, but don’t you know that Turku is a worth visiting place in Finland ? Follow us that you can explore the beauty of this city.
