--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 <p>Direct child element(s) of the grid container automatically becomes grid items.</p>
 
 <div class="grid-container">
-  <div class="grid-item">Place</div>
-  <div class="grid-item">Picture</div>
-  <div class="grid-item">3</div>  
-  <div class="grid-item">4</div>
-  <div class="grid-item">5</div>
-  <div class="grid-item">6</div>  
-  <div class="grid-item">7</div>
-  <div class="grid-item">8</div>
-  <div class="grid-item">9</div>  
+  <div class="grid-item">Go with us 1</div>
+  <div class="grid-item">Helsinki</div>
+  <div class="grid-item">Capiatal</div>  
+  <div class="grid-item">Go with us 2</div>
+  <div class="grid-item">Lapland</div>
+  <div class="grid-item">Father Christmas Hometown</div>  
+  <div class="grid-item">Go with us 3</div>
+  <div class="grid-item">Turku</div>
+  <div class="grid-item">Ancient Town</div>  
 </div>
     </ul>
     <p> Please enjoy it right now ! </p>
