--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
 </head>
 <body>
 
-<h1>Grid Elements</h1>
+<h2>"Go with us" Series</h2>
 
-<p>A Grid Layout must have a parent element with the <em>display</em> property set to <em>grid</em> or <em>inline-grid</em>.</p>
-
-<p>Direct child element(s) of the grid container automatically becomes grid items.</p>
+<p>Here we introduce to you our series called "Go with us" as a travel guide when you plan to visit Finland</p>
 
 <div class="grid-container">
   <div class="grid-item">Go with us 1</div>
