--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 <div class="grid-container">
   <div class="grid-item">Go with us 1</div>
   <div class="grid-item">Helsinki</div>
-  <div class="grid-item">Capiatal</div>  
+  <div class="grid-item"><img src="helsinki.jpg" alt="capital" /></div>  
   <div class="grid-item">Go with us 2</div>
   <div class="grid-item">Lapland</div>
-  <div class="grid-item">Father Christmas Hometown</div>  
+  <div class="grid-item"><img src="lapland.jpg" alt="Christmas" /></div>  
   <div class="grid-item">Go with us 3</div>
   <div class="grid-item">Turku</div>
   <div class="grid-item">Ancient Town</div>  
