--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="grid-item"><img src="helsinki.jpg" alt="capital" /></div>  
   <div class="grid-item">Go with us 2</div>
   <div class="grid-item">Lapland</div>
-  <div class="grid-item"><img src="lapland.jpg" alt="Christmas" /></div>  
+  <div class="grid-item"><img src="lapland(1).jpg" alt="Christmas" /></div>  
   <div class="grid-item">Go with us 3</div>
   <div class="grid-item">Turku</div>
   <div class="grid-item">Ancient Town</div>  
