--- a/index.html
+++ b/index.html
@@ -36,16 +36,17 @@
 
 <p>Here we introduce to you our series called "Go with us" as a travel guide when you plan to visit Finland</p>
 
-<div class="grid-container">
+<div class="grid-item">Ep</div>
+  <div class="grid-item">Place</div>
+  <div class="grid-item">Picture</div>  
+  <div class="grid-container">
   <div class="grid-item">Go with us 1</div>
-  <div class="grid-item">Helsinki</div>
+  <div class="grid-item"><a href="helsinki.html">Capital Helsinki</a></div>
   <div class="grid-item"><img src="helsinki.jpg" alt="capital" /></div>  
   <div class="grid-item">Go with us 2</div>
-  <div class="grid-item">Lapland</div>
+  <div class="grid-item"><a href="lapland.html"> Santa Claus Hometown Lapland </a></div>
   <div class="grid-item"><img src="lapland(1).jpg" alt="Christmas" /></div>  
-  <div class="grid-item">Go with us 3</div>
-  <div class="grid-item">Turku</div>
-  <div class="grid-item">Ancient Town</div>  
+  
 </div>
     </ul>
     <p> Please enjoy it right now ! </p>
