--- a/index.html
+++ b/index.html
@@ -28,25 +28,38 @@
   font-size: 30px;
   text-align: center;
 }
+<style>
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: #2196F3;
+  padding: 10px;
+}
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
 </style>
 </head>
 <body>
 
 <h2>"Go with us" Series</h2>
 
-<p>Here we introduce to you our series called "Go with us" as a travel guide when you plan to visit Finland</p>
 
-<div class="grid-item">Ep</div>
+
+<div class="grid-container">
+  <div class="grid-item">Episode</div>
   <div class="grid-item">Place</div>
   <div class="grid-item">Picture</div>  
-  <div class="grid-container">
   <div class="grid-item">Go with us 1</div>
-  <div class="grid-item"><a href="helsinki.html">Capital Helsinki</a></div>
-  <div class="grid-item"><img src="helsinki.jpg" alt="capital" /></div>  
+  <div class="grid-item">Helsinki</div>
+  <div class="grid-item"><img src="helsinki.jpg" alt="Capital" /></div>  
   <div class="grid-item">Go with us 2</div>
-  <div class="grid-item"><a href="lapland.html"> Santa Claus Hometown Lapland </a></div>
-  <div class="grid-item"><img src="lapland(1).jpg" alt="Christmas" /></div>  
-  
+  <div class="grid-item">Lapland</div>
+  <div class="grid-item"><img src="lapland (1).jpg" alt="Christmas" /></div>  
 </div>
     </ul>
     <p> Please enjoy it right now ! </p>
