--- a/index.html
+++ b/index.html
@@ -35,12 +35,25 @@
   background-color: #2196F3;
   padding: 10px;
 }
+.grid-item1 {
+   font-size: 40px;
+  color: purple;
+  text-align: center;
+  font-family: inherit;
+  }
+.grid-item2 {
+ width: 150px;
+  height: 200px;
+  float: left;
+  border-style:dotted;
+  border-color: darkred;
+  border-radius: 20px; 
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
   padding: 20px;
   font-size: 30px;
-  text-align: center;
+  text-align: left;
 }
 </style>
 </head>
@@ -51,15 +64,15 @@
 
 
 <div class="grid-container">
-  <div class="grid-item">Episode</div>
-  <div class="grid-item">Place</div>
-  <div class="grid-item">Picture</div>  
+  <div class="grid-item1">Episode</div>
+  <div class="grid-item1">Place</div>
+  <div class="grid-item1">Picture</div>  
   <div class="grid-item">Go with us 1</div>
   <div class="grid-item">Helsinki</div>
-  <div class="grid-item"><img src="helsinki.jpg" alt="Capital" /></div>  
+  <div class="grid-item2"><img src="helsinki.jpg" alt="Capital" /></div>  
   <div class="grid-item">Go with us 2</div>
   <div class="grid-item">Lapland</div>
-  <div class="grid-item"><img src="lapland (1).jpg" alt="Christmas" /></div>  
+  <div class="grid-item2"><img src="lapland (1).jpg" alt="Christmas" /></div>  
 </div>
     </ul>
     <p> Please enjoy it right now ! </p>
