--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 }
 .grid-item1 {
    font-size: 40px;
-  color: purple;
+  color: green;
   text-align: center;
   font-family: inherit;
   }
 .grid-item2 {
  width: 150px;
   height: 200px;
-  float: left;
+  float: center;
   border-style:dotted;
   border-color: darkred;
   border-radius: 20px; 
