--- a/index.html
+++ b/index.html
@@ -41,13 +41,7 @@
   text-align: center;
   font-family: inherit;
   }
-.grid-item2 {
- width: 150px;
-  height: 200px;
-  float: center;
-  border-style:dotted;
-  border-color: darkred;
-  border-radius: 20px; 
+
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
@@ -69,10 +63,10 @@
   <div class="grid-item1">Picture</div>  
   <div class="grid-item">Go with us 1</div>
   <div class="grid-item">Helsinki</div>
-  <div class="grid-item2"><img src="helsinki.jpg" alt="Capital" /></div>  
+  <div class="grid-item"><img src="helsinki.jpg" alt="Capital" /></div>  
   <div class="grid-item">Go with us 2</div>
   <div class="grid-item">Lapland</div>
-  <div class="grid-item2"><img src="lapland (1).jpg" alt="Christmas" /></div>  
+  <div class="grid-item"><img src="lapland (1).jpg" alt="Christmas" /></div>  
 </div>
     </ul>
     <p> Please enjoy it right now ! </p>
