--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
    
     <p> Finland is a nice country with many beautiful scenery. Today, we will introduce to you the series "GO WITH US" on our website to share some useful information about tourism city and how to get the best trip ever in Finland. </p>
     <ul>
-      <li>  <a href="helsinki.html">Capital Helsinki</a> </li>
-      <li>  <a href="turku.html"> Ancient Town Turku </a> </li>
-      <li>  <a href="lapland.html"> Santa Claus Hometown Lapland </a> </li>
+    
 
 
 
@@ -62,10 +60,10 @@
   <div class="grid-item1">Place</div>
   <div class="grid-item1">Picture</div>  
   <div class="grid-item">Go with us 1</div>
-  <div class="grid-item">Helsinki</div>
+  <div class="grid-item"><a href="helsinki.html">Capital Helsinki</a></div>
   <div class="grid-item"><img src="helsinki.jpg" alt="Capital" /></div>  
   <div class="grid-item">Go with us 2</div>
-  <div class="grid-item">Lapland</div>
+  <div class="grid-item"> <a href="lapland.html"> Santa Claus Hometown Lapland </a></div>
   <div class="grid-item"><img src="lapland (1).jpg" alt="Christmas" /></div>  
 </div>
     </ul>
