--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto;
-  background-color: #2196F3;
+  background-color: grey;
   padding: 10px;
 }
 .grid-item1 {
