--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto;
-  background-color: #2196F3;
+  background-color: rgb(196, 225, 215);
   padding: 10px;
 }
 .grid-item {
@@ -30,7 +30,7 @@
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto;
-  background-color: grey;
+  background-color: rgb(196, 225, 215);
   padding: 10px;
 }
 .grid-item1 {
@@ -39,6 +39,9 @@
   text-align: center;
   font-family: inherit;
   }
+ .grid-item2 {
+   font-style:italic;
+   text-shadow: -2px 2px;
 
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
@@ -59,10 +62,10 @@
   <div class="grid-item1">Episode</div>
   <div class="grid-item1">Place</div>
   <div class="grid-item1">Picture</div>  
-  <div class="grid-item">Go with us 1</div>
+  <div class="grid-item2">Go with us 1</div>
   <div class="grid-item"><a href="helsinki.html">Capital Helsinki</a></div>
   <div class="grid-item"><img src="helsinki.jpg" alt="Capital" /></div>  
-  <div class="grid-item">Go with us 2</div>
+  <div class="grid-item2">Go with us 2</div>
   <div class="grid-item"> <a href="lapland.html"> Santa Claus Hometown Lapland </a></div>
   <div class="grid-item"><img src="lapland (1).jpg" alt="Christmas" /></div>  
 </div>
