--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
   color: green;
   text-align: center;
   font-family: inherit;
+   border: 1px solid rgba(0, 0, 0, 0.8);
   }
  .grid-item2 {
    font-style:italic;
    text-shadow: -2px 2px;
+   font-size: 345px;
+    border: 1px solid rgba(0, 0, 0, 0.8);
 
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
