--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
  .grid-item2 {
    font-style:italic;
    text-shadow: -2px 2px;
-   font-size: 345px;
+   font-size: 35px;
+   color: blue;
     border: 1px solid rgba(0, 0, 0, 0.8);
 
 .grid-item {
