--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
   }
  .grid-item2 {
    font-style:italic;
-   text-shadow: -2px 2px;
+   text-shadow: -3px 3px;
    font-size: 35px;
    color: blue;
+   text-align: center;
+   font-family: cursive;
     border: 1px solid rgba(0, 0, 0, 0.8);
 
 .grid-item {
