--- a/index.html
+++ b/index.html
@@ -1,68 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
  <link rel="stylesheet" href="style.css">
+    <title> Practise ODS </title>
+  <style>
+    </style>
   </head>
+  
   <body>
     <h1> WELCOME TO FINLAND </h1>
    
     <p> Finland is a nice country with many beautiful scenery. Today, we will introduce to you the series "GO WITH US" on our website to share some useful information about tourism city and how to get the best trip ever in Finland. </p>
     <ul>
-    
+   
 
 
 
-<style>
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  background-color: rgb(196, 225, 215);
-  padding: 10px;
-}
-.grid-item {
-  background-color: rgb(197, 226, 216);
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 20px;
-  font-size: 30px;
-  text-align: center;
-}
-<style>
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  background-color: rgb(196, 225, 215);
-  padding: 10px;
-}
-.grid-item1 {
-   font-size: 40px;
-  color: green;
-  text-align: center;
-  font-family: inherit;
-   border: 1px solid rgba(0, 0, 0, 0.8);
-  }
- .grid-item2 {
-   font-style:italic;
-   text-shadow: -3px 3px;
-   font-size: 35px;
-   color: blue;
-   text-align: center;
-   font-family: cursive;
-    border: 1px solid rgba(0, 0, 0, 0.8);
-
-.grid-item {
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 20px;
-  font-size: 30px;
-  text-align: left;
-}
-</style>
-</head>
 <body>
 
 <h2>"Go with us" Series</h2>
-
-
 
 <div class="grid-container">
   <div class="grid-item1">Episode</div>
@@ -75,7 +31,7 @@
   <div class="grid-item"> <a href="lapland.html"> Santa Claus Hometown Lapland </a></div>
   <div class="grid-item"><img src="lapland (1).jpg" alt="Christmas" /></div>  
 </div>
-    </ul>
+    
     <p> Please enjoy it right now ! </p>
 
   </body>
