--- a/index.html
+++ b/index.html
@@ -26,8 +26,21 @@
   <div class="grid-item"> <a href="lapland.html"> Santa Claus Hometown Lapland </a></div>
   <div class="grid-item"><img src="introlapland.jpg" alt="Christmas" /></div>  
 </div>
-    
-    <p> Please enjoy it right now ! </p>
+  
+<footer>   
+  <p>
+     <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkhanhdoan-vo.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+                <img style="border:0;width:88px;height:31px"
+                    src="http://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Valid CSS!" />
+  </a>
+            
+  
+   <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fkhanhdoan-vo.github.io%2F">
+               <img src="http://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" height="31" width="88" />
 
+    </a>
+     </p>
+     </footer>
   </body>
 </html>
