--- a/index.html
+++ b/index.html
@@ -1,19 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
  <link rel="stylesheet" href="style.css">
-    <title> Practise ODS </title>
-  <style>
-    </style>
   </head>
-  
   <body>
     <h1> WELCOME TO FINLAND </h1>
    
     <p> Finland is a nice country with many beautiful scenery. Today, we will introduce to you the series "GO WITH US" on our website to share some useful information about tourism city and how to get the best trip ever in Finland. </p>
+    <ul>
     
 
+
+
+<style>
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: rgb(196, 225, 215);
+  padding: 10px;
+}
+.grid-item {
+  background-color: rgb(197, 226, 216);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+<style>
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: rgb(196, 225, 215);
+  padding: 10px;
+}
+.grid-item1 {
+   font-size: 40px;
+  color: green;
+  text-align: center;
+  font-family: inherit;
+   border: 1px solid rgba(0, 0, 0, 0.8);
+  }
+ .grid-item2 {
+   font-style:italic;
+   text-shadow: -3px 3px;
+   font-size: 35px;
+   color: blue;
+   text-align: center;
+   font-family: cursive;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: left;
+}
+</style>
+</head>
+<body>
+
 <h2>"Go with us" Series</h2>
+
+
 
 <div class="grid-container">
   <div class="grid-item1">Episode</div>
@@ -21,26 +70,13 @@
   <div class="grid-item1">Picture</div>  
   <div class="grid-item2">Go with us 1</div>
   <div class="grid-item"><a href="helsinki.html">Capital Helsinki</a></div>
-  <div class="grid-item"><img src="introhelsinki.jpg" alt="Capital" /></div>  
+  <div class="grid-item"><img src="helsinki.jpg" alt="Capital" /></div>  
   <div class="grid-item2">Go with us 2</div>
   <div class="grid-item"> <a href="lapland.html"> Santa Claus Hometown Lapland </a></div>
-  <div class="grid-item"><img src="introlapland.jpg" alt="Christmas" /></div>  
+  <div class="grid-item"><img src="lapland (1).jpg" alt="Christmas" /></div>  
 </div>
-  
-<footer>   
-  <p>
-     <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkhanhdoan-vo.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
-                <img style="border:0;width:88px;height:31px"
-                    src="http://jigsaw.w3.org/css-validator/images/vcss"
-                    alt="Valid CSS!" />
-  </a>
-            
-  
-   <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fkhanhdoan-vo.github.io%2F">
-               <img src="http://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" height="31" width="88" />
+    </ul>
+    <p> Please enjoy it right now ! </p>
 
-    </a>
-     </p>
-     </footer>
   </body>
 </html>
