--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
   <div class="grid-item1">Picture</div>  
   <div class="grid-item2">Go with us 1</div>
   <div class="grid-item"><a href="helsinki.html">Capital Helsinki</a></div>
-  <div class="grid-item"><img src="helsinki.jpg" alt="Capital" /></div>  
+  <div class="grid-item"><img src="introhelsinki.jpg" alt="Capital" /></div>  
   <div class="grid-item2">Go with us 2</div>
   <div class="grid-item"> <a href="lapland.html"> Santa Claus Hometown Lapland </a></div>
-  <div class="grid-item"><img src="lapland (1).jpg" alt="Christmas" /></div>  
+  <div class="grid-item"><img src="intrlapland.jpg" alt="Christmas" /></div>  
 </div>
     </ul>
     <p> Please enjoy it right now ! </p>
